--- a/web-scraping-electron-app/public/index.html
+++ b/web-scraping-electron-app/public/index.html
@@ -84,6 +84,7 @@
 
   <!-- Entry Script -->
   <script type="module" src="../src/frontend/js/renderer.js"></script>
+  <div id="theme-overlay" style="display: none;"></div>
 </body>
 </html>
 
