--- a/web-scraping-electron-app/public/index.html
+++ b/web-scraping-electron-app/public/index.html
@@ -25,7 +25,7 @@
 <body>
   <nav class="navbar navbar-expand-sm navbar-dark fixed-top draggable">
     <div class="container-fluid">
-      <span class="navbar-brand mb-0 h1">Web Scraper</span>
+      <span id="home-navbar-brand" class="navbar-brand mb-0 h1 not-draggable">Web Scraper</span>
       <button class="navbar-toggler not-draggable" type="button" data-bs-toggle="collapse"
               data-bs-target="#navbarSupportedContent">
         <span class="navbar-toggler-icon"></span>
